# SideloadedIPA

./: .env.example  .gitignore  Gemfile  IMPROVEMENT_PLAN.md  MIGRATION.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/: FUNDING.yml  dependabot.yml  dependency-audit-exceptions.json
.github/actions/build-patched-zsign/: action.yml
.github/actions/build-qualification-fixture/: action.yml
.github/actions/install-asc/: action.yml
.github/actions/ssh-debug/: action.yml
.github/workflows/: integration.yml  pr-checks.yml  r2-seed.yml  sign-and-upload.yml
.serena/: project.yml
configs/: tasks.toml  tasks.toml.example
configs/signing/livecontainer/: root-process.plist
docs/: architecture.md  configuration.md  operator-runbook.md  security.md  serverless-migration-plan.html  troubleshooting.md
openspec/: project.md
openspec/changes/add-ci-caching-optimization/: design.md  proposal.md  tasks.md
openspec/changes/add-multi-bundle-ipa-signing/: design.md  tasks.md
openspec/changes/complete-production-signing-orchestration/: design.md  review-reconciliation.md  tasks.md
openspec/changes/consolidate-signing-pipeline/: design.md  tasks.md
openspec/changes/harden-and-streamline-project-foundation/: design.md  implementation-baseline.md  tasks.md  (+1 more)
patches/zsign/: qualification-contract.json  v1.1.1-per-profile-entitlements.patch
scripts/: __init__.py  _bootstrap.py  app_icon.py  apps_registry.py  benchmark_pipeline.py  build_backend_qualification_fixture.py  check_changes.py  check_dependency_audits.py  compare_backend_qualification.py  exercise_codesign_oracle.py  exercise_zsign_backend.py  migrate_icon_keys.py  prepare_env.sh  qualify_backend_prerequisites.py  r2_store.py  reconcile_icons.py  run_signing.py  run_workflow_fixture.py  seed_r2.py  site_update.py  sync_profiles.rb  sync_profiles_asc.py
site/: README.md  app-card.js  app.js  apps.js  index.html  styles.css
src/sideloadedipa/: __init__.py  __main__.py  apple_commands.py  apple_planning.py  apple_state_probe.py  application.py  bundle_transform.py  cache_decisions.py  cache_fingerprint.py  cache_reuse.py  cache_store.py  cancellation.py  certificate_identity.py  cli.py  errors.py  inspection.py  manifest_store.py  package_commands.py  package_runner.py  pipeline_application.py  ports.py  preflight.py  production_pipeline.py  profile_storage.py  profile_validation.py  publication.py  retrying.py  run_reports.py  signing_executor.py  signing_inputs.py  signing_planner.py  signing_reports.py  signing_service.py  stage_manifests.py  subprocesses.py
tests/: __init__.py  conftest.py  test_app_group_planning.py  test_app_icon.py  test_apple_command_backend.py  test_apple_commands.py  test_apple_intents.py  test_apple_planning.py  test_apple_state.py  test_apps_registry.py  test_asc_adapter.py  test_atomics.py  test_backend_qualification.py  test_benchmark_pipeline.py  test_build_backend_qualification_fixture.py  test_bundle_graph_discovery.py  test_bundle_id_reconciliation.py  test_bundle_transform.py  test_cache_decisions.py  test_cache_fingerprint.py  test_cache_reuse.py  test_cache_store.py  test_cancellation.py  test_capability_reconciliation.py  test_certificate_identity.py  test_check_changes.py  test_cli.py  test_compare_backend_qualification.py  test_config_parser.py  test_dependency_audits.py  test_domain_models.py  test_entitlement_comparison.py  test_entitlement_inspector.py  test_entitlement_policy.py  test_entitlement_templates.py  test_errors.py  test_exercise_codesign_oracle.py  test_exercise_zsign_backend.py  test_github_source.py  test_identifier_policy.py  (+59 more)
web/: .gitignore  next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: AppCard.tsx  AppGrid.tsx
web/fixtures/: apps.json
web/lib/: apps.ts  itms-route.ts  plist.ts  revalidation.ts  site.ts
web/scripts/: check-plist-golden.ts
web/test/: apps.test.ts  routes.test.ts
(+218 files in other folders)
