[project]
name = "sideloadedipa"
version = "1.0.0"
description = "Automated IPA signing and distribution workflow using GitHub Actions"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.43.51",
    "cryptography==49.0.0",
    "lief==1.0.0",
    "pillow>=10.4.0",
    "pyasn1==0.6.4",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
sideloadedipa = "sideloadedipa.cli:main"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "black>=23.7.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sideloadedipa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: opt-in tests that download checksum-pinned external fixtures",
]
addopts = [
    "--strict-markers",
    "--cov=sideloadedipa",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["^src/sideloadedipa/legacy/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | work
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["work/*"]

[tool.coverage.run]
source = ["sideloadedipa"]
omit = ["tests/*", "**/__pycache__/*", "work/*", "src/sideloadedipa/legacy/*"]

[tool.coverage.report]
fail_under = 95
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
